<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#FFFAFA">

    <TextView
        android:id="@+id/textField"
        android:textAlignment="textEnd"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:hint="@string/hint"
        android:textColor="@color/black"
        android:textColorHint="#737373"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@id/button_7"
        app:layout_constraintEnd_toEndOf="@id/button_multiplication"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="@color/main_buttons"
        android:text="@string/button7"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_4"
        app:layout_constraintEnd_toStartOf="@id/button_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textField" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="@color/main_buttons"
        android:text="@string/button8"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_5"
        app:layout_constraintEnd_toStartOf="@id/button_9"
        app:layout_constraintStart_toEndOf="@+id/button_7"
        app:layout_constraintTop_toBottomOf="@id/textField" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="@color/main_buttons"
        android:text="@string/button9"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_6"
        app:layout_constraintEnd_toStartOf="@id/button_multiplication"
        app:layout_constraintStart_toEndOf="@+id/button_8"
        app:layout_constraintTop_toBottomOf="@id/textField" />

    <Button
        android:id="@+id/button_multiplication"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="@color/special_buttons"
        android:text="@string/button_mult"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_minus"
        app:layout_constraintStart_toEndOf="@+id/button_9"
        app:layout_constraintTop_toBottomOf="@id/textField" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="@color/main_buttons"
        android:text="@string/button4"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_1"
        app:layout_constraintEnd_toStartOf="@id/button_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_7" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="@color/main_buttons"
        android:text="@string/button5"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_2"
        app:layout_constraintEnd_toStartOf="@id/button_6"
        app:layout_constraintStart_toEndOf="@+id/button_4"
        app:layout_constraintTop_toBottomOf="@id/button_8" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="@color/main_buttons"
        android:text="@string/button6"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_3"
        app:layout_constraintEnd_toStartOf="@id/button_minus"
        app:layout_constraintStart_toEndOf="@+id/button_5"
        app:layout_constraintTop_toBottomOf="@id/button_9" />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="@color/special_buttons"
        android:text="@string/button_minus"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_plus"
        app:layout_constraintStart_toEndOf="@+id/button_6"
        app:layout_constraintTop_toBottomOf="@id/button_multiplication" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="@color/main_buttons"
        android:text="@string/button1"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_C"
        app:layout_constraintEnd_toStartOf="@id/button_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_4" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="@color/main_buttons"
        android:text="@string/button2"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_0"
        app:layout_constraintEnd_toStartOf="@id/button_3"
        app:layout_constraintStart_toEndOf="@+id/button_1"
        app:layout_constraintTop_toBottomOf="@id/button_5" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="@color/main_buttons"
        android:text="@string/button3"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_dot"
        app:layout_constraintEnd_toStartOf="@id/button_plus"
        app:layout_constraintStart_toEndOf="@+id/button_2"
        app:layout_constraintTop_toBottomOf="@id/button_6" />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="@color/special_buttons"
        android:text="@string/button_plus"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintTop_toBottomOf="@id/button_minus"
        app:layout_constraintStart_toEndOf="@+id/button_3"
        app:layout_constraintBottom_toTopOf="@id/button_division"/>

    <Button
        android:id="@+id/button_C"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="@color/special_buttons"
        android:text="@string/button_cancel"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintTop_toBottomOf="@id/button_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_0"
        app:layout_constraintBottom_toTopOf="@id/button_delete"/>

    <Button
        android:id="@+id/button_0"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="@color/main_buttons"
        android:text="@string/button0"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintTop_toBottomOf="@id/button_2"
        app:layout_constraintStart_toEndOf="@+id/button_C"
        app:layout_constraintEnd_toStartOf="@id/button_dot"
        app:layout_constraintBottom_toTopOf="@id/button_eqls"/>

    <Button
        android:id="@+id/button_dot"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="@color/special_buttons"
        android:text="@string/button_dot"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintTop_toBottomOf="@id/button_3"
        app:layout_constraintStart_toEndOf="@+id/button_0"
        app:layout_constraintEnd_toStartOf="@id/button_division"
        app:layout_constraintBottom_toTopOf="@id/button_eqls"/>

    <Button
        android:id="@+id/button_division"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="@color/special_buttons"
        android:text="@string/button_div"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_eqls"
        app:layout_constraintStart_toEndOf="@+id/button_dot"
        app:layout_constraintTop_toBottomOf="@id/button_plus" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="@color/special_buttons"
        android:text="@string/button_del"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toStartOf="@id/button_eqls"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_C" />

    <Button
        android:id="@+id/button_eqls"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="@color/special_buttons"
        android:text="@string/button_eql"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintStart_toEndOf="@+id/button_delete"
        app:layout_constraintTop_toBottomOf="@id/button_0"
        app:layout_constraintEnd_toEndOf="@id/button_division"/>

</androidx.constraintlayout.widget.ConstraintLayout>